footer links fixed

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,12 +56,10 @@
 
     <footer class="py-0.4 my-0.4"style="background-color: black;" >
         <ul class=" nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="#" class="nav-link" style="color: white; font-family: Georgia, serif; font-size: 18px;" href="https://github.com/Armaan457">GitHub</a></li>
-          <li class="nav-item"><a href="#" class="nav-link" style="color: white; font-family: Georgia, serif; font-size: 18px;" href="https://www.linkedin.com/in/armaan-jagirdar-183b47285/">LinkedIn</a></li>
+          <li class="nav-item"><a class="nav-link" style="color: white; font-family: Georgia, serif; font-size: 18px;" href="https://github.com/Armaan457">GitHub</a></li>
+          <li class="nav-item"><a class="nav-link" style="color: white; font-family: Georgia, serif; font-size: 18px;" href="https://www.linkedin.com/in/armaan-jagirdar-183b47285/">LinkedIn</a></li>
         </ul>
         <p class="text-center" style="color: white; font-size: 18px">Made by Armaan Jagirdar</p>
       </footer>
 
 </html>
-
-#2E2E2E
